--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=33061
-DB_DATABASE=laravel
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=steering_db
 DB_USERNAME=root
 DB_PASSWORD=root
 
